After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655342 - memory leak in clutter_bin_layout_get_preferred_width/height
memory leak in clutter_bin_layout_get_preferred_width/height
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
1.7.x
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-26 12:48 UTC by Roland Peffer
Modified: 2011-07-26 13:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Roland Peffer 2011-07-26 12:48:17 UTC
Clutter Version 1.7.2

Functions:
 clutter_bin_layout_get_preferred_width 
 clutter_bin_layout_get_preferred_height

Missing   

g_list_free(children);

after previous call to   

GList *children = clutter_container_get_children (container);


Please fix,
Thx
Roland
Comment 1 Emmanuele Bassi (:ebassi) 2011-07-26 13:51:16 UTC
thanks, fixed in master and the 1.7.6 snapshot