bin-layout: Fix a leak

https://bugzilla.gnome.org/show_bug.cgi?id=655342